--- a/ddap-v2-process/src/main/resources/message.properties
+++ b/ddap-v2-process/src/main/resources/message.properties
@@ -13,6 +13,8 @@ parameter.null=[%s]\u53C2\u6570\u4E3A\u7A7A
 parameter.not.exist=[%s]\u6570\u636E\u4E0D\u5B58\u5728
 file.broken=\u6587\u4EF6\u635F\u574F
 upload.exception=\u4E0A\u4F20\u5931\u8D25
+db.exception=\u6570\u636E\u5E93\u5F02\u5E38
+system.exception=\u7CFB\u7EDF\u5F02\u5E38
 
 swagger.title=\u7269\u8054\u7F51\u6570\u636E\u5E73\u53F0
 swagger.description=\u7269\u8054\u7F51\u6570\u636E\u5E73\u53F0\u63A5\u53E3\u63CF\u8FF0
