--- a/ddap-v2-process/pom.xml
+++ b/ddap-v2-process/pom.xml
@@ -38,29 +38,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
-	      <groupId>org.springframework</groupId>
-	      <artifactId>spring-jdbc</artifactId>
-	      <version>${spring.version}</version>
-	    </dependency>
-		
-		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.17</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-actuator</artifactId>
+	    </dependency>
 		
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpclient</artifactId>
-		    <version>4.5.2</version>
 		</dependency>
 		
 	    <dependency>
@@ -81,13 +75,16 @@
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.18</version>
 		</dependency>
 		<dependency>
+		  	<groupId>com.oracle.ojdbc</groupId>
+		  	<artifactId>com.oracle.ojdbc</artifactId>
+		  	<version>6</version>
+		</dependency>
+		<!-- <dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-dbcp2</artifactId>
-		    <version>2.1.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
