--- a/ddap-v2-process/pom.xml
+++ b/ddap-v2-process/pom.xml
@@ -105,6 +105,11 @@
 		    <artifactId>fel</artifactId>
 		    <version>0.8</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.9</version>
+		</dependency>
 	  
 	</dependencies>
 
