添加平台协议接口实现

--- a/ddap-v2-process/.classpath
+++ b/ddap-v2-process/.classpath
@@ -27,5 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/test/java/com/cetiti/ddapv2/process/spi/bar-p.jar"/>
+	<classpathentry kind="lib" path="src/test/java/com/cetiti/ddapv2/process/spi/foo-p.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
