--- a/ddap-v2-process/src/main/resources/application.properties
+++ b/ddap-v2-process/src/main/resources/application.properties
@@ -48,8 +48,8 @@ hk82.jdbc.jmxEnabled=true
 
 logging.file=ddap.log
 logging.path=../logs
-logging.level.root=INFO
-logging.level.org.springframework=INFO
+logging.level.root=WARN
+logging.level.org.springframework=WARN
 #logging.config=classpath:log4j2-spring.xml
 
 #spring.resources.static-locations=F:/wserp/static/
