--- a/ddap-v2-process/src/main/resources/config.properties
+++ b/ddap-v2-process/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 
-tcp.server.demoAcceptor.name=demoAcceptor
-tcp.server.demoAcceptor.port=8090
+tcp.server.defaultAcceptor.name=defaultAcceptor
+tcp.server.defaultAcceptor.port=8090
 
 tcp.server.httpAcceptor.name=httpAcceptor
 tcp.server.httpAcceptor.port=80
